--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "src/App.js",
   "scripts": {
-   "dev": "parcel src/index.html",
-   "format": "prettier --write \"src/**/*.{js,jsx}\"",
-   "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "dev": "parcel src/index.html",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,10 @@
   "devDependencies": {
     "eslint": "8.8.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "parcel": "2.3.2",
     "prettier": "2.5.1"
   },
